--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/tbouchnafa/httpedis#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "ioredis": "^3.2.2",
     "mime-types": "^2.1.18",
