--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "httpedis",
   "version": "1.0.0",
   "description": "Http wrapper for ioredis",
-  "main": "index.js",
+  "main": "httpedis.js",
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha test/**/*.js --opts test/mocha.opts"
+    "test": "node_modules/mocha/bin/mocha test/**/*.js --opts test/mocha.opts",
+    "start": "node httpedis"
   },
   "repository": {
     "type": "git",
